[package]
name = "voipbits"
version = "0.1.0"
authors = ["Weiyuan Wu <doomsplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
tokio = { version = "0.2", features = ["macros", "rt-threaded", "io-util"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
structopt = { version = "0.3" }
rusoto_core = "0.44"
rusoto_dynamodb = "0.44"
futures = "0.3"
log = "0.4"
env_logger = "0.7"
lazy_static = "1"
fehler = "1"
thiserror = "1"
reqwest = { version = "0.10", features = ["json"] }
failure = "0.1"
maplit = "1"
regex = "1"
rand = "0.7"
rsa = "0.3"
base64 = "0.12"
chrono-tz = "0.5"
