[package]
authors = ["Weiyuan Wu <doomsplayer@gmail.com>"]
autobins = false
edition = "2018"
name = "voipbits"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aws-config = "0.10.1"
aws-sdk-dynamodb = "0.10.1"
axum = "0.5"
base64 = "0.13"
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.6"
fehler = "1"
futures = "0.3"
hyper = "0.14"
lambda-web = {version = "0.1.9", features = ["hyper"]}
lambda_runtime = "0.5.1"
maplit = "1"
rand = "0.8"
regex = "1"
reqwest = {version = "0.11", features = ["json"]}
rsa = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
structopt = {version = "0.3"}
thiserror = "1"
tokio = {version = "1.17", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.2"

[patch.crates-io]
lambda-web = {git = "https://github.com/dovahcrow/lambda-web"}
